update pom of web services for the webapp pns-isa-devops/projet-isa-devops-20-team-b-20#24